[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    ".git",
    ".github",
    ".vscode",
    ".devcontainer",
    ".venv",
    "__pycache__",
]

[tool.hatch.build.targets.wheel]
packages = ["timewarrior_timesheet"]

[project]
name = "timewarrior-timesheet"
dynamic = ["version"]
description = "Generate a timesheet PDF from Timewarrior data."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Martin Hans", email = "martin@artnim.io" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fpdf2",
    "timew",
    "typer",
]

[project.scripts]
generate-timesheet = "timewarrior_timesheet.cli:app"

[project.urls]
Homepage = "https://github.com/artnim/timewarrior-timesheet"

[tool.hatch.version]
path = "timewarrior_timesheet/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "ruff", 
  "black",
  "ipython",
  "isort",
  "pyright",
]
path = ".venv"

[tool.hatch.envs.default.scripts]
format = "black timewarrior_timesheet"
lint = "ruff check timewarrior_timesheet"
sort-imports = "isort timewarrior_timesheet"
check-types = "pyright timewarrior_timesheet"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:download tests}"

[tool.coverage.run]
source_pkgs = ["volueinsight_download", "tests"]
branch = true
parallel = true
omit = [
  "download/__about__.py",
]

[tool.coverage.paths]
_download = ["download", "*/volueload/download"]
tests = ["tests", "*/volueload/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]